add questions and grab elements for manipulation

--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
 </head>
 <body>
     <header>
-        <a href="#">View High Scores</a>
-        <p>Time: </p>
+        <a href="#" id="score-link">View High Scores</a>
+        <p id="timer"></p>
     </header>
     <main>
         <section id="container">
             <section id="quiz-box">
-                <h1 id="question"></h1>
+                <h1 id="question">What number do you like the best?</h1>
+                <button id="b1">11111111111111111111111111111111111111111111</button>
+                <button id="b2" class="quiz-buttons">2</button>
+                <button id="b3" class="quiz-buttons">3</button>
+                <button id="b4" class="quiz-buttons">4</button>
+                <p id="answer-confirmation"></p>
             </section>
         </section>
 
