--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <main>
         <section id="container">
             <section id="quiz-box">
-                <h1 id="question">What number do you like the best?</h1>
-                <button id="b1">11111111111111111111111111111111111111111111</button>
-                <button id="b2" class="quiz-buttons">2</button>
-                <button id="b3" class="quiz-buttons">3</button>
-                <button id="b4" class="quiz-buttons">4</button>
-                <p id="answer-confirmation"></p>
+                <h1 id="question"></h1>
+                <button id="b1"></button>
+                <button id="b2" class="quiz-buttons"></button>
+                <button id="b3" class="quiz-buttons"></button>
+                <button id="b4" class="quiz-buttons"></button>
+                <p id="answer-result"></p>
             </section>
         </section>
 
