--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     <main>
         <section id="container">
             <section id="quiz-box">
-                <h1 id="question"></h1>
-                <button id="b1"></button>
+                <!-- <h1 id="question"></h1>
+                <button id="b1" ></button>
                 <button id="b2" class="quiz-buttons"></button>
                 <button id="b3" class="quiz-buttons"></button>
                 <button id="b4" class="quiz-buttons"></button>
-                <p id="answer-result"></p>
+                <p id="answer-result"></p> -->
+                <!-- <form action="post"></form> -->
             </section>
         </section>
 
