refactor quiz starter

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <main>
         <section id="container">
             <section id="quiz-box">
-                <!-- <h1 id="question"></h1>
-                <button id="b1" ></button>
-                <button id="b2" class="quiz-buttons"></button>
-                <button id="b3" class="quiz-buttons"></button>
-                <button id="b4" class="quiz-buttons"></button>
-                <p id="answer-result"></p> -->
-                <!-- <form action="post"></form> -->
+                <h1 id="question">Welcome to the Code Quiz!</h1>
+                <button class="b1" id="">Please Click Here to Continue</button>
+                <button class="b2" id=""></button>
+                <button class="b3" id=""></button>
+                <button class="b4" id=""></button>
+                <p id="answer-result"></p>
+                <form action="post"></form>
             </section>
         </section>
 
