--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <main>
         <section id="container">
             <section id="quiz-box">
-                <h1 id="question">Welcome to the Code Quiz!</h1>
-                <button class="b1" id="">Please Click Here to Continue</button>
-                <button class="b2" id=""></button>
-                <button class="b3" id=""></button>
-                <button class="b4" id=""></button>
+                <h1 id="quiz-question">Welcome to the Code Quiz!</h1>
+                <button class="quiz-buttons" id="b1">Please Click Here to Continue</button>
+                <button class="quiz-buttons" id="b2"></button>
+                <button class="quiz-buttons" id="b3"></button>
+                <button class="quiz-buttons" id="b4"></button>
                 <p id="answer-result"></p>
                 <form action="post"></form>
             </section>
