quiz looping correctly now

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section id="container">
             <section id="quiz-box">
-                <h1 id="quiz-question">Welcome to the Code Quiz!</h1>
+                <h1 id="quiz-question"></h1>
                 <button class="quiz-buttons" id="b1">Please Click Here to Continue</button>
                 <button class="quiz-buttons" id="b2"></button>
                 <button class="quiz-buttons" id="b3"></button>
