add clearInterval to keep the timer from continuing to proc on new loops

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section id="container">
             <section id="quiz-box">
                 <h1 id="quiz-question"></h1>
-                <button class="quiz-buttons" id="b1">Please Click Here to Continue</button>
+                <button class="quiz-buttons" id="b1"></button>
                 <button class="quiz-buttons" id="b2"></button>
                 <button class="quiz-buttons" id="b3"></button>
                 <button class="quiz-buttons" id="b4"></button>
