add answer confirmation

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <button class="quiz-buttons" id="b4"></button>
                 <p id="answer-result"></p>
                 <form action="post"></form>
+                <button id="startNext"></button>
             </section>
         </section>
 
