--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <section class="results">
                 <h2 id="resultsQ">Would you like to record your High Score?</h2>
                 <form id="form">
-                    <label for="initials">Enter your initials</label><br>
+                    <label for="initials">Enter your name</label><br>
                     <input type="text" id="initials" name="userInitials" value="">
                 </form>
                 <button id="submitHS">Submit High Score</button>
-                <p>High Scores:<br><span id="savedHS"></span></p>
+                <p>High Scores:<br><br><span id="savedHS"></span></p>
             </section>
             <button id="startNext" class="button">Start Quiz</button>
             <!-- <section id="scorePage"></section> -->
