--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <input type="text" id="initials" name="userInitials" value="">
                 </form>
                 <button id="submitHS">Submit High Score</button>
-                <p>High Scores:<br><br><span id="savedHS"></span></p>
+                <p id="leaderboard">High Scores:<br><br><span id="savedHS"></span></p>
             </section>
             <button id="startNext" class="button">Start Quiz</button>
             <!-- <section id="scorePage"></section> -->
